--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap - CSS -->
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
 
     <!-- jQuery -->
-    <source src="../static/js/jquery-3.6.0.js" th:src="@{/js/jquery-3.6.0.js}"/>
+    <script type="text/javascript" src="../static/js/jquery-3.6.0.js" th:src="@{/js/jquery-3.6.0.js}"></script>
+    <script type="text/javascript" src="../static/js/main.js" th:src="@{/js/main.js}"></script>
     <title>Document</title>
 </head>
+
 <body>
+    <div class="container">
+        <h1 class="text-center" >Pomodoro App</h1>
+
+        <!-- Main Timer -->
+        <div class="container">
+            <div class="row">
+                <div class="col-5">
+                    <h4 id="minutes"></h4>
+                </div>
+                <div class="col-2">
+                    <h4>:</h4>
+                </div>
+                <div class="col-5">
+                    <h4 id="seconds"></h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Play y Reset Buttons -->
+    <div class="container d-flex justify-content-center">
+        <button class="btn">Esconder</button>
+    </div>
     
+
+    <!-- Bootstrap - Bundle -->
+    <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
+
 </html>
