progreso reloj.html

--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,11 @@
 
     <!-- Google Font Pacifico -->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <title>Document</title>
+
+    <!-- Google Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <title>Pomodoro</title>
 </head>
 <body>
     <div class="container">
@@ -23,13 +27,13 @@
         <div class="container timer">
             <div class="row">
                 <div class="col-4">
-                    <h1 id="minutes"></h1>
+                    <h1 id="minutes">00</h1>
                 </div>
                 <div class="col-2">
                     <h1>:</h1>
                 </div>
                 <div class="col-4">
-                    <h1 id="seconds"></h1>
+                    <h1 id="seconds">00</h1>
                 </div>
             </div>
         </div>
@@ -40,14 +44,18 @@
 
         <!-- Botones Reset y Start -->
         <div class="container d-flex justify-content-center align-items-center my-5">
-            <button id="btn-start" class="btn">Comenzar</button>
-            <button class="btn">Reiniciar</button>
+            <button id="btn-start" class="timer_btn timer_btn-control timer_btn-start">
+                <span class="material-icons">play_arrow</span>
+            </button>
+            <button id="btn-start" class="timer_btn timer_btn-reset">
+                <span class="material-icons">timer</span>
+            </button>
+            
         </div>
     </div>
 
     <!-- Bootstrap JS Bundle -->
     <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
-
     <!-- jQuery -->
     <script src="../static/js/jquery-3.6.0.js" th:src="@{/js/jquery-3.6.0.js}"></script>
     <!-- Personalizes JS -->
