--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,22 +1,6 @@
-/* 
-    h1 {
-    
-    font-size: 3,6cm;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-decoration-style: double;
-    text-align: center;
-    background-color:transparent;
-    
-    border-radius: 6px;
-    border: 2px;
-    border-color: rgb(12, 143, 44);
-    margin-left: 120px;
-    margin-right: 120px;
-    padding-left: 6px;
-    padding-right: 6px;
-
-} */
+/* Adri */
       
+/* Geri */
 
 body {
 
@@ -59,5 +43,5 @@ h1{
     font-family: 'Pacifico', cursive;  
     text-shadow: 2px 2px rgba(0,0,0,0.3);   
 }
-
+/* Facu */
     
