Actualizacion 2 reloj.html

--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -19,7 +19,7 @@
     <title>Pomodoro</title>
 </head>
 
-<body>
+<body class="vista-reloj">
     <div class="container">
         <!-- Heading -->
         <h1 class="text-center my-5 heading">Pomodoro App</h1>
@@ -27,14 +27,14 @@
         <!-- Main Timer -->
         <div class="container timer">
             <div class="row">
-                <div class="col-4">
-                    <h1 id="minutes">00</h1>
+                <div class="col-5">
+                    <h4 class="timer_part" id="minutes">00</h4>
                 </div>
                 <div class="col-2">
-                    <h1>:</h1>
+                    <h4 class="timer_part">:</h4>
                 </div>
-                <div class="col-4">
-                    <h1 id="seconds">00</h1>
+                <div class="col-5">
+                    <h4 class="timer_part" id="seconds">00</h4>
                 </div>
             </div>
         </div>
