Registro con modal y vista de gracias

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="es"></html>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -10,20 +10,19 @@
   <title>Registro</title>
 </head>
 
-<header class="p-2 text-white">
+<header class=" headerRegistro p-2 text-white">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a th:href="@{index.html}"
-        class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img src="/static/img/logo2.png" class="img-fluid" alt="">
+      <a th:href="@{index.html}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <img src="/src/main/resources/static/img/logo2.png" class="img-fluid" alt="logo2">
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a th:href="@{index.html} class=" nav-link px-2 text-white">Inicio</a></li>
+        <li><a th:href="@{index.html}" class="nav-link px-2 text-white">Inicio</a></li>
       </ul>
 
       <div class="text-end">
-        <a th:href="@{login.html}"><button type="button" class="btn-success">Iniciar Sesión</button></a>
+        <a th:href="@{login.html}"><button type="button" class="btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
       </div>
     </div>
   </div>
@@ -31,14 +30,17 @@
 
 <br>
 
-<body class="px-lg-5 py-lg-5">
+<body class="regex">
 
-  <div class="contenedor container col-4 px-5 py-4 rounded-3 border border-5 text-white">
+  <div class="contenedor container col-4 px-5 py-4 rounded-3 border border-5">
 
     <form th:action="@{/registrarUsuario}" method="post">
 
       <div class="col mb-2">
         <h3 class="text-decoration-underline text-center">Registro</h3>
+      </div>
+      <div class="container col-sm-12 text-danger">
+        <p th:if="${error!=null}" th:text="${error}"></p>
       </div>
       <div class="container">
         <div class="col mb-2">
@@ -76,7 +78,7 @@
           </div>
         </div>
         <div class="container">
-          <p>*(Campos obligatorios)</p>
+          <p class="obs">*(Campos obligatorios)</p>
         </div>
         <div class="col my-3 d-grid gap-2 col-12">
           <button type="submit" class="btn btn-success">Enviar</button>
@@ -90,9 +92,6 @@
     </form>
 
   </div>
-
-
-
 
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
