Actualizacion 3 reloj.html

--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -48,7 +48,7 @@
             <button id="btn-start" class="timer_btn timer_btn-control timer_btn-start">
                 <span class="material-icons">play_arrow</span>
             </button>
-            <button id="btn-start" class="timer_btn timer_btn-reset">
+            <button id="btn-reset" class="timer_btn timer_btn-reset">
                 <span class="material-icons">timer</span>
             </button>
             
