--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,9 +21,16 @@
 </head>
 
 <body class="vista-reloj">
-    <div class="container">
+    <div class="container-sm">
         <!-- Heading -->
-        <h1 class="text-center my-5 heading">Pomodoro App</h1>
+        <div class="d-flex justify-content-center my-4">
+            <div class="d-inline-flex pe-3 bg-dark bg-opacity-10 rounded-3">
+                <button id="btn-chk" class="check_btn">
+                    <span class="material-icons md-48">radio_button_unchecked</span>
+                </button>
+                <h1 class="text-center pt-2 heading">Nombre de la tarea</h1>
+            </div>
+        </div>
 
         <!-- Main Timer -->
         <div class="container timer">
@@ -45,13 +53,13 @@
 
         <!-- Botones Reset y Start -->
         <div class="container d-flex justify-content-center align-items-center my-5">
-            <button id="btn-start" class="timer_btn timer_btn-control timer_btn-start">
+            <button id="btn-start" class="timer_btn timer_btn-start">
                 <span class="material-icons">play_arrow</span>
             </button>
             <button id="btn-reset" class="timer_btn timer_btn-reset">
                 <span class="material-icons">timer</span>
             </button>
-            
+
         </div>
     </div>
 
