--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,55 +1,53 @@
 /* Adri */
 
-img{
-    width: 80px;
+.imgreg{
+    border-width: 1px;
+    border-color: white;
+    padding-top: 2px;
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-bottom: 2px;  
+    width: 100px  ;
+    background-color: transparent;
+    margin: auto;
+    display: block;
+    border-radius: 10px;
+    box-shadow: rgba(0,0,0,0.5);
 }
-p{
+.obs{
     
     font-weight: bolder;
 }
-header{
-    background-color: #1FAB89;
-}
-
-body{
-    background-color: #D7FBE8;
-  
-}
-
-.contenedor{
-    background-color: #62D2A2;
-    border-color: #1FAB89;
-    border-radius: 5px;
-    
-}
-
-button{
+.headerRegistro{
     background-color: #9DF3C4;
 }
+    
+.linkheader{
+    font-family: 'Pacifico', cursive;  
+    text-shadow: 2px 2px rgba(0,0,0,0.3);   
+    font-size: 25px;
+}
 
-      
 /* Geri */
 
-body {
-
-/* background: linear-gradient(black,#df4747) ; */
+.bodyIndex {
 background-color: #D7FBE8;
 font-family: arial;
 color:white
-
 }
-.btn{
+
+.but {
     background-color: #62D2A2;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
     border-color:none;
 }
+
 .borderedit{
     background-color: #9DF3C4;
     border: 2px solid #1FAB89;
     border-radius: 10px;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
 }
-
 
 .imgx {
     border-width: 1px;
@@ -58,7 +56,6 @@ color:white
     padding-right: 12px;
     padding-left: 12px;
     padding-bottom: 3px;  
-   /*  align-items: center; */
     width: 230px  ;
     background-color: transparent;
     margin: auto;
@@ -67,10 +64,8 @@ color:white
     box-shadow: rgba(0,0,0,0.5);
    }
       
-h1{
+.marca{
     font-family: 'Pacifico', cursive;  
     text-shadow: 2px 2px rgba(0,0,0,0.3);   
 }
 /* Facu */
-    
-
