--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,27 +10,27 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/styles.css" th:href="@{sstyles.css}">
+    <link rel="stylesheet" href="/static/css/styles.css" th:href="@{/css/styles.css}">
     <title>Document</title>
 </head>
 
 
-<body>
+<body class="bodyIndex">
     <div class="container-lg col-8 my-5 borderedit">
         <div class="col-4 container mt-4">
         <img src="/static/img/logo2.png" alt="logo2" class="imgx">
         </div>
         <div class="col-4 container d-flex justify-content-center mb-4">
-            <h1>Pomodoro app</h1>
+            <h1 class="marca">Pomodoro app</h1>
         </div>
         <div class="col-2 container d-flex flex-column justify-content-center">
-        <button type="button" class="btn btn-success" th:href="@{/usuario/registro}">Registrarse</button>
+        <button type="button" class="btn but btn-success" th:href="@{/usuario/registro}">Registrarse</button>
 
         <br>
 
-        <button type="button" class="btn btn-success" th:href="@{/usuario/iniciarSesion}">Iniciar Sesión</button><br>
+        <button type="button" class="btn but btn-success" th:href="@{/usuario/iniciarSesion}">Iniciar Sesión</button><br>
         
-        <button type="button" class="btn btn-success"th:href="@{/pomodoro}">Probar app</button><br>
+        <button type="button" class="btn but btn-success"th:href="@{/pomodoro}">Probar app</button><br>
         <br>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
