--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -2,27 +2,31 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-  <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font Pacifico -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
   <title>Registro</title>
 </head>
 
-<header class=" headerRegistro p-2 text-white">
+<header class="headerRegistro p-2">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <a th:href="@{index.html}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img src="/src/main/resources/static/img/logo2.png" class="img-fluid" alt="logo2">
+        <img src="/src/main/resources/static/img/logo2.png" class=" imgreg img-fluid" alt="Logo Pomodoro">
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a th:href="@{index.html}" class="nav-link px-2 text-white">Inicio</a></li>
+        <li><a th:href="@{index.html}" class="linkheader nav-link px-2 text-white ">Pomodoro app</a></li>
       </ul>
 
       <div class="text-end">
-        <a th:href="@{login.html}"><button type="button" class="btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
+        <a th:href="@{login.html}"><button type="button" class="but btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
       </div>
     </div>
   </div>
@@ -30,9 +34,9 @@
 
 <br>
 
-<body class="regex">
+<body class="bodyIndex">
 
-  <div class="contenedor container col-4 px-5 py-4 rounded-3 border border-5">
+  <div class="borderedit container col-4 px-5 py-4 ">
 
     <form th:action="@{/registrarUsuario}" method="post">
 
@@ -46,7 +50,7 @@
         <div class="col mb-2">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre*</label>
           <div class="col-sm-12">
-            <input type="text" required class="form-control" id="Nombre">
+            <input type="text" class="form-control" id="Nombre">
           </div>
         </div>
 
@@ -60,7 +64,7 @@
         <div class="col mb-2">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Email*</label>
           <div class="col-sm-12">
-            <input type="email" required class="form-control" id="Email">
+            <input type="email" required class="form-control" id="Mail">
           </div>
         </div>
 
@@ -81,7 +85,7 @@
           <p class="obs">*(Campos obligatorios)</p>
         </div>
         <div class="col my-3 d-grid gap-2 col-12">
-          <button type="submit" class="btn btn-success">Enviar</button>
+          <button type="submit" class="but btn btn-success">Enviar</button>
         </div>
 
         <div class="container col-sm-12">
@@ -93,7 +97,9 @@
 
   </div>
 
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
