rutas al css corregidas

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
       <a th:href="@{index.html}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img src="/src/main/resources/static/img/logo2.png" class=" imgreg img-fluid" alt="Logo Pomodoro">
+        <img src="../static/img/logo2.png" class=" imgreg img-fluid" alt="Logo Pomodoro">
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
