--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/styles.css" th:href="@{/css/styles.css}">
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
     <title>Document</title>
 </head>
 
@@ -18,7 +18,7 @@
 <body class="bodyIndex">
     <div class="container-lg col-8 my-5 borderedit">
         <div class="col-4 container mt-4">
-        <img src="/static/img/logo2.png" alt="logo2" class="imgx">
+        <img src="../static/img/logo2.png" alt="logo2" class="imgx">
         </div>
         <div class="col-4 container d-flex justify-content-center mb-4">
             <h1 class="marca">Pomodoro app</h1>
