--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,6 +1,6 @@
 /* Adri */
 
-img{
+.imgreg{
     width: 80px;
 }
 p{
@@ -23,7 +23,7 @@ body{
     
 }
 
-button{
+boton {
     background-color: #9DF3C4;
 }
 
@@ -36,7 +36,7 @@ font-family: arial;
 color:white
 }
 
-.btn{
+.but {
     background-color: #62D2A2;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
     border-color:none;
