gracias y registro terminado

--- a/src/main/resources/templates/gracias.html
+++ b/src/main/resources/templates/gracias.html
@@ -22,10 +22,10 @@
         <div class="col-4 container d-flex justify-content-center mb-4">
             <h1 class="marca">Pomodoro app</h1>
         </div>
-        <div class="container border">
+        <div class="container text-black col-8 text-center mb-5">
             <h1> ¡¡Gracias por registrarte!!</h1>
         </div>
-        <div class="container col-8 m-auto border">
+        <div class="container col-8 m-auto text-black">
             <div class="container">
                 <h4> Acerca de:</h4>
             </div>
