--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -28,11 +28,6 @@
     font-size: 25px;
 }
 
-boton {
-    background-color: #9DF3C4;
-}
-
-      
 /* Geri */
 
 .bodyIndex {
@@ -80,18 +75,17 @@ color:white
 
 
 .login{
- background: #D7FBE8;
+ background: #1FAB89;
 }
 
 .main-container{
     width: 1100px;
     height: 400px;
-    background: #9DF3C4;
+    background: #fff;
     margin-top: 150px;
     margin-left: 65px;
     padding: 40px 40px 40px 40px;
     border-radius: 10px;
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
 
 }
 
@@ -102,9 +96,10 @@ color:white
 }
 
 .caja-imagen img{
-width: 250px;
-margin-top: 10px;
-margin-left: 120px;
+width: 300px;
+height: 300px;
+margin-top: 80px;
+margin-left: 50px;
 display: inline;
 margin-right: 0px;
 box-sizing: border-box;
@@ -115,76 +110,49 @@ width: 500px;
 height: 300px;
 background: transparent;
 margin-left: 600px;
-margin-top: -350px;
+margin-top: -292px;
 }
 
 .pre-control{
+font-family: Georgia, 'Times New Roman', Times, serif;
 padding-top: 10px;
 padding-bottom: 10px;
+border-top: 10px;
+border-bottom: 10px;
+margin-top: 10px;
+margin-bottom: 10px;
 font-size: 20px;
 }
 
 .control{
-width: 100%;
-height: 35px;
-border-radius: 5px;
+    width: 100%;
+    height: 20px;
+    border-radius: 5px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 padding-top: 10px;
 padding-bottom: 10px;
-
+border-top: 10px;
+border-bottom: 10px;
+margin-top: 10px;
+margin-bottom: 10px;
 background: #D7FBE8;
 }
 
 .titulo{
-    font-size: 40px;
-    font-weight: bolder;
-    font-style: oblique;
-    
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
 }
 
-.boton {
-    margin-left: 81%;
-    background-color: #241288;
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
-    border-color:none;
+.boton{
+    margin-left: 85%;
+    padding: 5px 15px;
+    background: #62D2A2;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
 
 .derivada{
-    margin-top: -30px;
-    
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: -20px;
 }
 
-.nombre-app{
-    font-family: 'Pacifico', cursive;  
-    text-shadow: 2px 2px rgba(0,0,0,0.3); 
-    margin-top: -24px;
-    margin-left:120px;
-    color:white
-    
-}
-
-img{
-    width: 80px;
-}
-p{
-    
-    font-weight: bolder;
-}
-header{
-    background-color: #1FAB89;
-}
-
-body{
-    background-color: #D7FBE8;
-  
-}
-
-.contenedor{
-    background-color: #62D2A2;
-    border-color: #1FAB89;
-    border-radius: 5px;
-    
-}
-
-.but2{
-    background-color: #9DF3C4;
-}
