--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="es">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="estilos/styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Font Pacifico -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
   <title>Registro</title>
 </head>
 
-<header class="p-2 text-white">
+<header class="headerRegistro p-2">
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-      <a th:href="@{index.html}"
-        class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-        <img src="images/icono2.png" class="img-fluid" alt="">
+      <a th:href="@{index.html}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <img src="../static/img/logo2.png" class=" imgreg img-fluid" alt="Logo Pomodoro">
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a th:href="@{index.html} class=" nav-link px-2 text-white">Inicio</a></li>
+        <li><a th:href="@{index.html}" class="linkheader nav-link px-2 text-white ">Pomodoro app</a></li>
       </ul>
 
       <div class="text-end">
-        <a th:href="@{login.html}"><button type="button" class="btn-success">Iniciar Sesión</button></a>
+        <a th:href="@{login.html}"><button type="button" class="but btn-success btn-toolbar rounded">Iniciar Sesión</button></a>
       </div>
     </div>
   </div>
@@ -32,55 +34,58 @@
 
 <br>
 
-<body class="px-lg-5 py-lg-5">
+<body class="bodyIndex">
 
-  <div class="contenedor container col-4 px-5 py-4 rounded-3 border border-5 text-white">
+  <div class="borderedit container col-4 px-5 py-4 ">
 
     <form th:action="@{/registrarUsuario}" method="post">
 
       <div class="col mb-2">
         <h3 class="text-decoration-underline text-center">Registro</h3>
       </div>
+      <div class="container col-sm-12 text-danger">
+        <p th:if="${error!=null}" th:text="${error}"></p>
+      </div>
       <div class="container">
         <div class="col mb-2">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre*</label>
           <div class="col-sm-12">
-            <input type="text" required class="form-control" id="Nombre">
+            <input type="text" class="form-control" id="Nombre" name="nombre">
           </div>
         </div>
 
         <div class="col mb-2">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Apellido*</label>
           <div class="col-sm-12">
-            <input type="text" required class="form-control" id="Apellido">
+            <input type="text" class="form-control" id="Apellido" name="apellido">
           </div>
         </div>
 
         <div class="col mb-2">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Email*</label>
           <div class="col-sm-12">
-            <input type="email" required class="form-control" id="Email">
+            <input type="email" class="form-control" id="Mail" name="mail">
           </div>
         </div>
 
         <div class="col mb-2">
           <label for="inputPassword3" class="col-sm-2 col-form-label">Contraseña*</label>
           <div class="col-sm-12">
-            <input type="password" required class="form-control" id="Contraseña1">
+            <input type="password" class="form-control" id="Contraseña1" name="contrasena1">
           </div>
         </div>
 
         <div class="col mb-2">
           <label for="inputPassword3" class="col-sm-8 col-form-label">Repita Contraseña*</label>
           <div class="col-sm-12">
-            <input type="password" required class="form-control" id="Contraseña2">
+            <input type="password" class="form-control" id="Contraseña2" name="contrasena2">
           </div>
         </div>
         <div class="container">
-          <p>*(Campos obligatorios)</p>
+          <p class="obs">*(Campos obligatorios)</p>
         </div>
         <div class="col my-3 d-grid gap-2 col-12">
-          <button type="submit" class="btn btn-success">Enviar</button>
+          <button type="submit" class="but btn btn-success">Enviar</button>
         </div>
 
         <div class="container col-sm-12">
@@ -92,10 +97,9 @@
 
   </div>
 
-
-
-
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
