--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -8,15 +8,8 @@
     <!-- Google Font Pacifico -->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <!-- https://material.io/resources/icons/?style=baseline -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <!-- https://material.io/resources/icons/?style=outline -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
-    <!-- https://material.io/resources/icons/?style=round -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Round" rel="stylesheet">
-    <!-- https://material.io/resources/icons/?style=sharp -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp" rel="stylesheet">
-    <!-- https://material.io/resources/icons/?style=twotone -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -33,39 +26,28 @@
                     <p class="marca fs-1 text text-decoration-underline"> Tareas</p>
                 </div>
                 <div class="col-3 mt-3">
-                    <abbr title="Agregar tarea"><button type="button" class="btn but btn-success" th:href="@{}"><span
-                            class="material-icons-two-tone">
-                            add_task
-                        </span></button></abbr>
+                    <abbr title="Agregar tarea"><button type="button" class="btn but btn-success  rounded-pill"
+                            th:href="@{}">
+                            <span class="material-icons">
+                                add_task
+                            </span></button></abbr>
 
                 </div>
                 <div class="container border">
                     <div>
-                        <p class="fs-3 text">Proyecto: </p>
+                        <p class="fs-3 text titulo">Proyecto: </p>
                     </div>
                     <div class="container borderbox my-3">
-                        <abbr title="Tarea Terminada"><button type="button" class="btn but btn-success" th:href="@{}"><span
-                                class="material-icons-two-tone">
-                                done_all
-                            </span></button></abbr>
+                        <abbr title="Tarea Terminada"><button type="button" class="btn but btn-success rounded-pill"
+                                th:href="@{}"><span class="material-icons">
+                                    done_all
+                                </span></button></abbr>
                     </div>
-                   
-                    <div class="container borderbox my-3">
-                        <abbr title="Tarea Terminada"><button type="button" class="btn but btn-success" th:href="@{}"><span
-                            class="material-icons-two-tone">
-                            done_all
-                        </span></button></abbr>
-                    </div>
-                
-                    <div class="container borderbox my-3">
-                        <abbr title="Tarea Terminada"><button type="button" class="btn but btn-success" th:href="@{}"><span
-                            class="material-icons-two-tone">
-                            done_all
-                        </span></button></abbr>
-                    </div>
+
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
