--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -33,6 +33,14 @@
     border-radius: 10px;
     box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
 }
+.boxtarea{
+    font-size: 30px;
+    font-weight: bolder;
+    font-style: oblique;
+    color: black;
+    text-shadow: 2px 2px rgba(0,0,0,0.3);
+}
+
 
 /* Geri */
 
@@ -166,4 +174,3 @@ color:white
        color:white
        
    }
-
