--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -20,33 +20,120 @@
 
 <body class="bodyIndex">
     <div class="container-lg col-6 my-5 borderedit">
-        <div class="container">
-            <div class="row align-items-start">
-                <div class="col text-start">
-                    <p class="marca fs-1 text text-decoration-underline"> Tareas</p>
-                </div>
-                <div class="col-3 mt-3">
-                    <abbr title="Agregar tarea"><button type="button" class="btn but btn-success  rounded-pill"
-                            th:href="@{}">
-                            <span class="material-icons">
-                                add_task
-                            </span></button></abbr>
 
-                </div>
-                <div class="container border">
-                    <div>
-                        <p class="fs-3 text titulo">Proyecto: </p>
+        <head>
+            <div class="container">
+                <div class="row">
+                    <div class="col text-start">
+                        <p class="marca fs-1 text text-decoration-underline"> Tareas</p>
                     </div>
-                    <div class="container borderbox my-3">
-                        <abbr title="Tarea Terminada"><button type="button" class="btn but btn-success rounded-pill"
-                                th:href="@{}"><span class="material-icons">
+                    <div class="col-3 mt-3">
+                        <abbr title="Agregar tarea"><button type="button"
+                                class="btn but btn-success rounded-pill btn-lg" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal"">
+                                <span class="material-icons md-48">
+                                    add_task
+                                </span></button></abbr>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content borderedit">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title fs-2 text marca text-decoration-underline"
+                                            id="exampleModalLabel">Nueva Tarea</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form th:action="@{/}" method="post">
+                                            <div>
+                                                <p th:if="${error!=null}" th:text="${error}"></p>
+                                            </div>
+                                            <div class="col mb-1">
+                                                <label for="inputname"
+                                                    class="col-sm-2 col-form-label pre-control">Nombre</label>
+                                                <div class="col-sm-12 borderbox">
+                                                    <input type="text" class="form-control" id="Nombre" name="nombre">
+                                                </div>
+                                            </div>
+                                            <div class="col mb-1">
+                                                <label for="inputdate"
+                                                    class="col-sm-2 col-form-label pre-control">Fecha</label>
+                                                <div class="col-sm-12 borderbox">
+                                                    <input type="date" class="form-control" id="Nombre" name="fecha">
+                                                </div>
+                                            </div>
+                                            <div class="col mb-1">
+                                                <label for="inputtime"
+                                                    class="col-sm-6 col-form-label pre-control">Tiempo invertido</label>
+                                                <div class="col-sm-12 borderbox">
+                                                    <input type="number" class="form-control" id="tiempoInvertido"
+                                                        name="tiempoinv">
+                                                </div>
+                                            </div>
+                                            <div class="col mb-1">
+                                                <label for="inputtime"
+                                                    class="col-sm-6 col-form-label pre-control">Cantidad de pom</label>
+                                                <div class="col-sm-12 borderbox">
+                                                    <input type="number" class="form-control" id="cantidadPom"
+                                                        name="tiempoinv">
+                                                </div>
+                                            </div>
+                                            <div class="col mt-4">
+                                                <button type="button" class="btn but btn-success"
+                                                    data-bs-dismiss="modal">Cerrar</button>
+                                                <button type="submit" class="btn but btn-success">Guardar</button>
+                                            </div>
+                                        </form>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </head>
+
+        <body class="container">
+            <div>
+                <p class="fs-3 text titulo my-3">Proyecto:</p>
+            </div>
+            <div class="container borderbox my-2">
+                <div class="row">
+                    <div class="col-2 my-5">
+                        <abbr title="Tarea Terminada"><button type="button"
+                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
+                                    class="material-icons md-48">
                                     done_all
                                 </span></button></abbr>
                     </div>
+                    <div class="col-8 my-1">
+                        <div class="row">
+                            <p class="boxtarea text-center">Tarea:</p>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <p class="boxtarea">N° ciclos:</p>
+                            </div>
+                            <div class="col">
+                                <p class="boxtarea">Fecha</p>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-2 my-5"><abbr title="Empezar ciclo"><button type="button"
+                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
+                                    class="material-icons md-48">
+                                    play_circle_filled
+                                </span></button></abbr>
+                    </div>
                 </div>
             </div>
-        </div>
+
+        </body>
+
+    </div>
+    </div>
     </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
