--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -44,7 +44,7 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
-                                    <div class="modal-body">
+                                    <div class="modal-body my-3">
                                         <form th:action="@{/}" method="post">
                                             <div>
                                                 <p th:if="${error!=null}" th:text="${error}"></p>
@@ -113,10 +113,10 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <p class="boxtarea">N° ciclos:</p>
+                                <p class="boxtarea text-center">N° ciclos:</p>
                             </div>
                             <div class="col">
-                                <p class="boxtarea">Fecha</p>
+                                <p class="boxtarea text-center">Fecha</p>
                             </div>
                         </div>
                     </div>
