--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
     <section class="main-container container">
         <!--imagen-->
         <div class="caja-imagen container">
-            <img src="../static/img/logo2.png" alt="logo2">
+            <img th:src="@{/img/logo2.png}" alt="logo2">
         </div>
 
         <div class="container">
