--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,28 +18,29 @@
 <body class="bodyIndex">
     <div class="container-lg col-8 my-5 borderedit">
         <div class="col-4 container mt-4">
-        <img src="../static/img/logo2.png"  th:src="@{/img/logo2.png}" alt="logo2" class="imgx">
+            <img src="../static/img/logo2.png" th:src="@{/img/logo2.png}" alt="logo2" class="imgx">
         </div>
-        
+
         <div class="col-4 container d-flex justify-content-center mb-4">
             <h1 class="marca">Pomodoro app</h1>
         </div>
+
         <div class="col-2 container d-flex flex-column justify-content-center">
-        <button type="button" class="btn but btn-success" th:href="@{/usuario/registro}">Registrarse</button>
-
-        <br>
-
-        <button type="button" class="btn but btn-success" th:href="@{/usuario/iniciarSesion}">Iniciar Sesión</button><br>
-        
-        <button type="button" class="btn but btn-success" th:href="@{/pomodoro}">Probar app</button><br>
-        <br>
+            <a th:href="@{/registro}"></a><button type="button" class="btn but btn-success">Registrarse</button>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+        <br>
+        <div class="col-2 container d-flex flex-column justify-content-center">
+           <a th:href="@{/login}"></a><button type="button" class="btn but btn-success">Iniciar Sesión</button>
+        </div>
+        <br>
+        <div class="col-2 container d-flex flex-column justify-content-center">
+           <a th:href="@{/prueba}"></a> <button type="button" class="btn but btn-success">Probar app</button><br>
+        </div>
+        <br>
+      
     </div>
-    <!-- Bootstrap JS Bundle -->
-    <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+        <!-- Bootstrap JS Bundle -->
+        <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
