se corrije enlace en registro y avance en tareas

--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -38,7 +38,7 @@
 
   <div class="borderedit container col-4 px-5 py-4 ">
 
-    <form th:action="@{/registrarUsuario}" method="post">
+    <form th:action="@{/registrar}" method="post">
 
       <div class="col mb-2">
         <h3 class="text-decoration-underline text-center titulo">Registro</h3>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="container col-sm-12">
-          <a th:href="@{/index.html}" class="link-danger">¿Ya estas registrado? Iniciar Sesión</a>
+          <a th:href="@{/login.html}" class="link-danger">¿Ya estas registrado? Iniciar Sesión</a>
         </div>
       </div>
 
