--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -31,8 +31,8 @@
                         <abbr title="Agregar tarea"><button type="button"
                                 class="btn but btn-success rounded-pill btn-lg" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal"">
-                                <span class="material-icons md-48">
-                                    add_task
+                                <span class=" material-icons md-48">
+                                add_task
                                 </span></button></abbr>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true">
@@ -96,46 +96,53 @@
 
         <body class="container">
             <div>
-                <p class="fs-3 text titulo my-3">Proyecto:</p>
+                <p th:text="${proyecto.nombre}" class="fs-3 text titulo my-3">Proyecto:</p>
             </div>
-            <div class="container borderbox my-2">
-                <div class="row">
-                    <div class="col-2 my-5">
-                        <abbr title="Tarea Terminada"><button type="button"
-                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
-                                    class="material-icons md-48">
-                                    done_all
-                                </span></button></abbr>
-                    </div>
-                    <div class="col-8 my-1">
-                        <div class="row">
-                            <p class="boxtarea text-center">Tarea:</p>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <p class="boxtarea text-center">N° ciclos:</p>
-                            </div>
-                            <div class="col">
-                                <p class="boxtarea text-center">Fecha</p>
-                            </div>
-                        </div>
-                    </div>
+            <table>
+                <tbody>
+                    <tr th:each="tarea : ${tareas}">
+                        <div class="container borderbox my-2">
+                            <div class="row">
+                                <div class="col-2 my-5">
+                                    <abbr title="Tarea Terminada"><button type="button"
+                                            class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
+                                                class="material-icons md-48">
+                                                done_all
+                                            </span></button></abbr>
+                                </div>
+                                <div class="col-8 my-1">
+                                    <div class="row">
+                                        <p th:text="${tarea.nombre}"  class="boxtarea text-center">Tarea:</p>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <p th:text="${tarea.cantidadPom}" class="boxtarea text-center">N° ciclos:</p>
+                                        </div>
+                                        <div class="col">
+                                            <p th:text="${tarea.fecha}" class="boxtarea text-center">Fecha</p>
+                                        </div>
+                                    </div>
+                                </div>
 
-                    <div class="col-2 my-5"><abbr title="Empezar ciclo"><button type="button"
-                                class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
-                                    class="material-icons md-48">
-                                    play_circle_filled
-                                </span></button></abbr>
-                    </div>
-                </div>
-            </div>
+                                <div class="col-2 my-5"><abbr title="Empezar ciclo"><button type="button"
+                                            class="btn but btn-success rounded-pill btn-lg" th:href="@{}"><span
+                                                class="material-icons md-48">
+                                                play_circle_filled
+                                            </span></button></abbr>
+                                </div>
+                            </div>
+                        </div>
+
+                    </tr>
+                </tbody>
+            </table>
+
+
 
         </body>
 
     </div>
-    </div>
-    </div>
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
