actualizo gracias, registro y tareas

--- a/src/main/resources/templates/gracias.html
+++ b/src/main/resources/templates/gracias.html
@@ -39,7 +39,7 @@
             </div>
             <div class="container col-4 mt-5">
                 <div class="col my-3 d-grid gap-2 col-12">
-                    <a th:href="@{/login.html}"><button type="button"
+                    <a th:href="@{/login}"><button type="button"
                             class=" btn but btn-success">¡Empecemos!</button></a>
                 </div>
 
