--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -64,7 +64,7 @@
         <div class="col mb-2">
           <label for="inputEmail3" class="col-sm-2 col-form-label pre-control">Email*</label>
           <div class="col-sm-12  borderbox">
-            <input type="email" class="form-control" id="Mail" name="mail">
+            <input type="email" class="form-control" id="Mail" name="email">
           </div>
         </div>
 
@@ -89,7 +89,7 @@
         </div>
 
         <div class="container col-sm-12">
-          <a th:href="@{/login.html}" class="link-danger">¿Ya estas registrado? Iniciar Sesión</a>
+          <a th:href="@{/login}" class="link-danger">¿Ya estas registrado? Iniciar Sesión</a>
         </div>
       </div>
 
