--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -156,7 +156,7 @@ color:white
    
    .boton {
        margin-left: 81%;
-       background-color: #241288;
+       background-color: #62D2A2;
        box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
        border-color:none;
    }
@@ -172,5 +172,23 @@ color:white
        margin-top: -24px;
        margin-left:120px;
        color:white
+   }  
        
+    .borderbox-box{
+        background-color: #D7FBE8;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.4) ;
+        
+   }
+
+   .linkeable{
+    background-color: none;
+    border-color:none;
+    text-align: justify;
+    margin-left: 25%;
+   }
+
+   .imagen-box{
+       height: 50px;
    }
