cambio de ruta css

--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -10,7 +10,7 @@
 
 
     <!-- Personalized CSS -->
-    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/personal.css}">
+    <link rel="stylesheet" href="../static/css/styles.css" th:href="@{/css/styles.css}">
 
     <!-- Google Font Pacifico -->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
